# VanOffice

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.paperclip-data/instances/default/: config.json
docs/: SESSION-NOTES.md  v3-live-orchestration.md
docs/superpowers/plans/: 2026-03-18-pixel-office-ui-redesign.md
docs/superpowers/specs/: 2026-03-18-pixel-office-ui-redesign.md
scripts/: generate-tileset.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: mission-composer.tsx  office-scene.tsx  workspace-shell.tsx
src/components/composer/: mission-composer.tsx
src/components/office/: agent-sprite.tsx  canvas-office.tsx  furniture.tsx  meeting-bubble.tsx  office-view.tsx  phaser-office.tsx
src/components/outputs/: artifact-card.tsx  artifact-panel.tsx
src/components/sidebar/: approval-gate-card.tsx  approval-sidebar.tsx  command-input.tsx  validation-bar.tsx
src/lib/: config.ts  role-templates.ts  types.ts
src/lib/db/: client.ts  schema.ts
src/lib/runtime/: engine.ts  paperclip-executor.ts  projector.ts  (+1 more)
src/types/: better-sqlite3.d.ts
tests/: approval-sidebar.test.tsx  artifact-panel.test.tsx  artifact-provenance.test.ts  office-layout.test.ts  office-scene.test.tsx  office-state.test.ts  paperclip-client.test.ts  paperclip-executor.test.ts  pathfinding.test.ts  projector.test.ts  role-templates.test.ts  tilemap-generator.test.ts  workspace-shell.test.tsx
(+17 files in other folders)
